@@ -1,3 +1,4 @@
+* Store session in database
 * New Wizard design
 * Add pyson.Id
 * Use XML-RPC struct for Decimal and Date
